--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,8 @@
     "@types/jest": "^29.2.4",
     "jest": "^29.3.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
