--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vitor-msp/orcamento-domestico#readme",
   "devDependencies": {
     "@types/jest": "^29.2.4",
+    "@types/uuid": "^9.0.0",
     "jest": "^29.3.1",
     "typescript": "^4.9.4"
   },
