--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/vitor-msp/orcamento-domestico#readme",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/uuid": "^9.0.0",
     "jest": "^29.3.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "uuid": "^9.0.0"
   }
 }
