--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,19 @@
   },
   "homepage": "https://github.com/vitor-msp/orcamento-domestico#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
+    "@types/pg": "^8.6.5",
     "@types/uuid": "^9.0.0",
     "jest": "^29.3.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
     "uuid": "^9.0.0"
   }
 }
