--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "api para controle de orcamentos domesticos",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "ts-node-dev --respawn --transpile-only src/main/index.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@types/pg": "^8.6.5",
     "@types/uuid": "^9.0.0",
     "jest": "^29.3.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
@@ -30,6 +32,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
+    "postgres-migrations": "^5.3.0",
     "uuid": "^9.0.0"
   }
 }
