--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,13 +2,21 @@ version: "3"
 
 services:
 
+  api:
+    container_name: orcamento_domestico_backend
+    image: vitormsp/orcamento_domestico_backend
+    ports:
+      - "3001:3001"
+    depends_on:
+      - postgres
+
   postgres:
     container_name: postgres
     image: postgres
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
       - ./container-db-scripts:/docker-entrypoint-initdb.d
@@ -21,6 +29,8 @@ services:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - 9002:80
+      - "9002:80"
     volumes:
       - ./data/pgadmin:/var/lib/pgadmin
+    depends_on:
+      - postgres
