--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,17 @@
 FROM node:latest AS builder
 RUN mkdir /api
 WORKDIR /api
-RUN cp . .
+COPY . .
 RUN npm install
-RUN npm build
+RUN npm run build
 
 FROM node:latest
 RUN mkdir /api
 WORKDIR /api
 COPY --from=builder /api/dist ./dist
 COPY ./package.json .
+COPY .env .
+COPY ./migrations ./migrations
 RUN npm install --only=production
 EXPOSE 3001
 CMD ["npm","run","start"]
