chore(build): adjusted to build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,16 @@
 FROM node:18.13.0-bullseye AS builder
-RUN mkdir /api
-WORKDIR /api
+RUN mkdir /app
+WORKDIR /app
 COPY . .
 RUN npm install
 RUN npm run build
 
 FROM node:18.13.0-bullseye
-RUN mkdir /api
-WORKDIR /api
-COPY --from=builder /api/dist ./dist
+RUN mkdir /app
+WORKDIR /app
+COPY --from=builder /app/build ./build
 COPY ./package.json .
 COPY .env .
 RUN npm install --only=production
 EXPOSE 3001
-CMD ["npm","run","start"]
+CMD ["npx","serve","build"]
